--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import 'framework.css';
-/* 
+/*
 	Table of contents:
 	1. Common styles
 	2. Common responsive styles
@@ -25,7 +25,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
-  color: #1E0E62;
+  color: #13093e;
   -webkit-font-smoothing: antialiased;
 }
 body.dev {
