--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ input, textarea {
   border: 0;
   outline: none;
   background: transparent;
-  color: #1E0E62;
+  color: #13093e;
   resize: none;
 }
 
